--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,4 +14,5 @@
 [alias]
 	last = log -1 --stat
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    st = status -s
 
