--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,3 +16,7 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     st = status -s
 
+[http]
+	proxy = http://127.0.0.1:8118
+[https]
+	proxy = http://127.0.0.1:8118
